@@ -20,7 +20,7 @@ delFromSubscene3d(ids, subscene = subsceneInfo()$id)
 \arguments{
   \item{viewport, projection, model}{
 How should the new subscene be embedded?  Possible values are
-\code{c("inherit", "modify", "replace")}.
+\code{c("inherit", "modify", "replace")}.  See Details below.
 }
   \item{parent}{
 The parent subscene (defaults to the current subscene).
@@ -41,6 +41,15 @@ A vector of integer object ids to add to the subscene.
 \details{
 Note that the scene \dQuote{owns} objects; \code{addToSubscene3d} and \code{delFromSubscene3d} 
 just put their ids into or remove them from the list being displayed within a particular subscene.
+
+The viewport, projection matrix and model matrix each have three possible settings:
+\code{c("inherit", "modify", "replace")}.  \code{"inherit"} means that the corresponding value
+from the parent subscene will be used.  \code{"replace"} means that the new subscene will
+have its own value of the value, independent of its parent.  \code{"modify"} means that the 
+child value will be applied first, and then the parent value will be applied.  For viewport, this
+means that if the parent viewport is changed, the child will maintain its relative position.  For
+the two matrices, \code{"modify"} is unlikely to give satisfactory results, but it is available
+for possible use.
 }
 \value{
 If successful, each function returns the object id of the subscene.
